--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     script(type="text/javascript", src="../js/jquery-2.1.4.min.js")
     link(rel="stylesheet" href="../css/bootstrap.css")
+    link(rel="stylesheet" href="../css/custom.css")
   body
     #wrap
       .container
@@ -14,7 +15,7 @@ html
       block content
     block footer
       footer
-        .container
+        div.copyright.secondary_section
           p
             | Copyright &copy; 2014 | Issues? Submit to
             a(href="http://twitter.com/dav_vd") @dav_vd
