--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,8 +15,10 @@ html
       block content
     block footer
       footer
-        div.copyright.secondary_section
-          p
-            | Copyright &copy; 2014 | Issues? Submit to
-            a(href="http://twitter.com/dav_vd") @dav_vd
-            | .
+        .container
+          div.copyright.secondary_section
+            div.col-sd-6.col-md-6
+              | Copyright &copy; 2015
+            div.col-sd-6.col-md-6.text-right
+              | Issues? Submit to&nbsp;
+              a(href="http://twitter.com/dav_vd") @dav_vd
