--- a/views/index.jade
+++ b/views/index.jade
@@ -6,3 +6,12 @@ block content
       div.col-md-8
         | Medicus is a "Health & Beauty" oriented HTML5 Template, built to serve as a foundation for your web projects. The Design is based on fine typography and large photography. It is build with Twitter Bootstrap, the front-end development framework with a steep learning curve that changes the way you develop sites. Medicus lets you build your pages with a great collection of section layouts and helper classes that offer extreme flexibility and pixel-perfect design.
         | To use the template you have to be familiar with HTML & CSS. The demo is self-explanatory and you can easily study the HTML files to discover how to customise the templates to your needs. This documentation covers some basics to help you get started... If you are a web developer you are about to boost your development workflow!
+    div.row
+      div.col-md-4
+        button.btn Test
+      div.col-md-4
+        button.boton Mix1
+      div.col-md-4
+        button.boton_verde Mix2
+    div.row
+      | &nbsp;
