Por fin se ve la imagen de logo

--- a/views/header.jade
+++ b/views/header.jade
@@ -23,13 +23,13 @@ block content
           h4.secondary_section.transparent.transparent-film
             i.fa.fa-heart.secondary_section
             a(href="#") Cardiology
-          a(href="#", style="background-image:url(./static/images/entry-001.jpg)", class="department_photo stretchy-wrapper ratio_1-1")
+          a(href="#", style="background-image:url(http://localhost:3000/images/entry-001.jpg)", class="department_photo stretchy-wrapper ratio_1-1")
       div.col-md-3.col-sm-6.col-xs-6
         div.departament
           h4.secondary_section.transparent.transparent-film
             i.fa.fa-heart.secondary_section
             a(href="#") Cardiology
-          a(href="#", style="background-image:url(static/images/entry-001.jpg)", class="department_photo stretchy-wrapper ratio_1-1")
+          a(href="#", style="background-image:url(entry-001.jpg)", class="department_photo stretchy-wrapper ratio_1-1")
       div.col-md-3.col-sm-6.col-xs-6
         div.departament
           h4.secondary_section.transparent.transparent-film
