--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
         div.mainbar.gradient.diagonal
           div.container
             div.logo
-              a(href="./static/images/medicus-header-logo-x64.png", alt="logo")
+              img(alt="logo", src="images/medicus-header-logo-x64.png")
               p(class="animated slideInLeft") Call us Toll free +30 1234-567-890
             div.menu_container
               nav
