--- a/views/header.jade
+++ b/views/header.jade
@@ -23,25 +23,29 @@ block content
           h4.secondary_section.transparent.transparent-film
             i.fa.fa-heart.secondary_section
             a(href="#") Cardiology
-          a(href="#", style="background-image:url(http://localhost:3000/images/entry-001.jpg)", class="department_photo stretchy-wrapper ratio_1-1")
+          a(href="#" class="thumbnail")
+            img(src="images/entry-001.jpg" alt="Cardiology")
+      div.col-md-3.col-sm-6.col-xs-6
+        div.departament
+          h4.secondary_section.transparent.transparent-film
+            i.fa.fa-heart.secondary_section
+            a(href="#") Physiotherapy
+          a(href="#" class="thumbnail")
+            img(src="images/entry-002.jpg" alt="Cardiology")
+      div.col-md-3.col-sm-6.col-xs-6
+        div.departament
+          h4.secondary_section.transparent.transparent-film
+            i.fa.fa-heart.secondary_section
+            a(href="#") Hematology
+          a(href="#" class="thumbnail")
+            img(src="images/entry-005.jpg" alt="Cardiology")
       div.col-md-3.col-sm-6.col-xs-6
         div.departament
           h4.secondary_section.transparent.transparent-film
             i.fa.fa-heart.secondary_section
             a(href="#") Cardiology
-          a(href="#", style="background-image:url(entry-001.jpg)", class="department_photo stretchy-wrapper ratio_1-1")
-      div.col-md-3.col-sm-6.col-xs-6
-        div.departament
-          h4.secondary_section.transparent.transparent-film
-            i.fa.fa-heart.secondary_section
-            a(href="#") Cardiology
-          a(href="#", style="background-image:url(./images/entry-001.jpg)", class="department_photo stretchy-wrapper ratio_1-1")
-      div.col-md-3.col-sm-6.col-xs-6
-        div.departament
-          h4.secondary_section.transparent.transparent-film
-            i.fa.fa-heart.secondary_section
-            a(href="#") Cardiology
-          a(href="#", style="background-image:url(/images/entry-001.jpg)", class="department_photo stretchy-wrapper ratio_1-1")
+          a(href="#" class="thumbnail")
+            img(src="images/entry-001.jpg" alt="Cardiology")
   .container
     div.row
       div.col-md-12.section_header.thin
