--- a/views/contact.jade
+++ b/views/contact.jade
@@ -1,10 +1,15 @@
 extends layout
 
 block content
-  .container
-    div.row
-      div.col-md-12
-        | &nbsp;
+
+  section(id="about").bg-primary
+    .container
+      div.row
+        div.col-lg-8.col-lg-offset-2.text-center
+          h2.section-heading Contact
+          hr.light
+          div.row
+          
   .container
     div.row
       div.col-md-8.col-md-offset-4.section_header.thin
