--- a/views/index.jade
+++ b/views/index.jade
@@ -1,17 +1,23 @@
 extends layout
 
 block content
-  .container
-    div.row
-      div.col-md-8
-        | Medicus is a "Health & Beauty" oriented HTML5 Template, built to serve as a foundation for your web projects. The Design is based on fine typography and large photography. It is build with Twitter Bootstrap, the front-end development framework with a steep learning curve that changes the way you develop sites. Medicus lets you build your pages with a great collection of section layouts and helper classes that offer extreme flexibility and pixel-perfect design.
-        | To use the template you have to be familiar with HTML & CSS. The demo is self-explanatory and you can easily study the HTML files to discover how to customise the templates to your needs. This documentation covers some basics to help you get started... If you are a web developer you are about to boost your development workflow!
-    div.row
-      div.col-md-4
-        button.btn Test
-      div.col-md-4
-        button.boton Mix1
-      div.col-md-4
-        button.boton_verde Mix2
-    div.row
-      | &nbsp;
+  header
+    div.header-content
+      div.header-content-inner
+        h1 Medicus is a "Health & Beauty" oriented HTML5 Template, built to serve as a foundation for your web projects.
+        hr
+        p The Design is based on fine typography and large photography. It is build with Twitter Bootstrap, the front-end development framework with a steep learning curve that changes the way you develop sites. Medicus lets you build your pages with a great collection of section layouts and helper classes that offer extreme flexibility and pixel-perfect design.
+        a(href="#about").btn. btn-primary.btn-xl.page-scroll Find Out More
+
+
+  section(id="about").bg-primary
+    div.container
+      div.row
+        div.col-lg-8.col-lg-offset-2.text-center
+          h2.section-heading We've got what you need!
+          hr.light
+          p.text-faded
+            | Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!
+          a(href="#").btn.btn-default.btn-xl Get Started!
+      div.row
+        | &nbsp;
